--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ stage1:
      - pwd
      - whoami
      - echo "do your build here"
-    artifacts:
-        path: src/target/*.war
+ artifacts:
+      paths: 
+          - src/target/*.war
 
