--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,5 +12,5 @@ stage1:
      - echo "do your build here"
  artifacts:
       paths: 
-          - src/target/*.war
+          - Webcontent/target/*.war
 
