Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,5 +12,5 @@ stage1:
      - echo "do your build here"
  artifacts:
       paths: 
-          - Webcontent/target/*.war
+          - demo1/*.war
 
