--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ sast:
   artifacts:
   
     paths:
-      - gl-sast-report.html
+      - gl-sast-report.json
     reports:
-      sast: gl-sast-report.html
+      sast: gl-sast-report.json
 
 include:
    - template: Security/SAST.gitlab-ci.yml
