Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ gemnasium-maven-dependency_scanning:
 deploy:
   stage: deploy
   tags:
-   - shell_1
+   - docker
   environment: Production
     - portalshell
   script:
