Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,8 +76,8 @@ deploy:
   stage: deploy
   tags:
    - docker
-  environment: Production
-    - portalshell
+  # environment: Production
+  #   - portalshell
   script:
     - cp /home/gitlab-runner/builds/bEzhoC-n/0/fineshift/users/bhagyashree-kote/employee-registration/target/.war /opt/tomcat/webapps/
 
