--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ deploy:
   # environment: Production
   #   - portalshell
   script:
-     - cp /home/gitlab-runner/builds/bEzhoC-n/0/fineshift/users/bhagyashree-kote/employee-registration/target/*.war /opt/tomcat/webapps
+     - sudo cp /home/gitlab-runner/builds/bEzhoC-n/0/fineshift/users/bhagyashree-kote/employee-registration/target/*.war /opt/tomcat/webapps
     
 
 
